<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="1dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#92D7F0"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/nom_partenaire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="#FFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:textStyle="bold"
                android:text="@string/num_piece"
                android:textSize="15sp"
                android:textColor="#000" />

            <TextView
                android:id="@+id/num_piece_partenaire"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:textColor="#333" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:textStyle="bold"
                android:text="@string/date_deliv_piece_identite"
                android:textSize="15sp"
                android:textColor="#000" />

            <TextView
                android:id="@+id/date_deliv_piece_partenaire"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:textColor="#333" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:textStyle="bold"
                android:text="@string/date_exp_piece_identite"
                android:textSize="15sp"
                android:textColor="#000" />

            <TextView
                android:id="@+id/date_exp_piece_partenaire"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:textColor="#333" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:textStyle="bold"
                android:text="@string/lieu_deliv_piece_identite"
                android:textSize="15sp"
                android:textColor="#000" />

            <TextView
                android:id="@+id/lieu_deliv_piece_partenaire"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:textColor="#333" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:textStyle="bold"
                android:text="@string/type"
                android:textSize="15sp"
                android:textColor="#000" />

            <TextView
                android:id="@+id/type_partenaire"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:textColor="#333" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:textStyle="bold"
                android:text="@string/fonction"
                android:textSize="15sp"
                android:textColor="#000" />

            <TextView
                android:id="@+id/fonction_partenaire"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:textColor="#333" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:textStyle="bold"
                android:text="@string/telephone"
                android:textSize="15sp"
                android:textColor="#000" />

            <TextView
                android:id="@+id/telephone_partenaire"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:textColor="#333" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:textStyle="bold"
                android:text="@string/email"
                android:textSize="15sp"
                android:textColor="#000" />

            <TextView
                android:id="@+id/email_partenaire"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:textColor="#333" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:textStyle="bold"
                android:text="@string/adresse"
                android:textSize="15sp"
                android:textColor="#000" />

            <TextView
                android:id="@+id/adresse_partenaire"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:textSize="15sp"
                android:textColor="#333" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>