<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegFinDossierActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/header_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:cardCornerRadius="1dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:attr/listDivider"
            android:showDividers="middle"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="10dp"
                    android:textStyle="bold"
                    android:text="@string/total_paye"
                    android:textSize="15sp"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/total_paye_reg_fin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:textSize="15sp"
                    android:textColor="#333" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="10dp"
                    android:textStyle="bold"
                    android:text="@string/reste_a_payer"
                    android:textSize="15sp"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/reste_a_payer_reg_fin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:textSize="15sp"
                    android:textColor="#333" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/title_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_pane"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:cardCornerRadius="1dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:textStyle="bold"
                android:text="@string/montant_reg_fin"
                android:textSize="15sp"
                android:textColor="#000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textStyle="bold"
                android:text="@string/date_reg_fin"
                android:textSize="15sp"
                android:textColor="#000" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <ListView
        android:id="@+id/reg_fin_dossier_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_pane"
        android:background="@color/white"
        android:scrollbars="none"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:dividerHeight="2dp" />

</RelativeLayout>